Populate and evaluate enhancements (#655)
* populate and evaluate refactor

* cleanup

* fix inputparameterresolver

* cleanup

* add tests and cleanup

* add tests

* cleanup

* add tests

* update GMTP Questionnaire test

* add javadocs

* repository can be final now

* cleanup

* fix use of useServerData parameter in evaluate request